--- a/about_me.html
+++ b/about_me.html
@@ -18,7 +18,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="./INDEX2.html">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -40,17 +40,45 @@
                         </div>
                     </li>
                 </ul>
+                <ul class="narbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Log in</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
 
     <div class="container">
-        <h1>About me</h1>
-        <h2>대전사람 김다정</h2>
-        <p>파란 하늘을 좋아합니다.</p>
-        <a href="INDEX2.html">첫화면으로 가기</a>
-        <img src="./hwk/images/1.png" height="300px">
+        <div class="row my-3">
+            <div class="col-9">
+                <h1>About me</h1>
+                <h2>대전사람 김다정</h2>
+                <p>파란 하늘을 좋아합니다.</p>
+                <a href="INDEX2.html">첫화면으로 가기</a>
 
+               
+            </div>
+            <div class="col-3">
+             <img src="./hwk/images/1.png" height="300px">
+             </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Portfolio</h2>
+                </div>
+              <div class="col-lg-3 bg-secondary">
+                <img src="./hwk/images/1.png" class="img-fluid">    
+              </div>
+              <div class="col-lg-3 bg-warning">
+                <img src="./hwk/images/그림1.png" class="img-fluid">    
+              </div>
+              <div class="col-lg-6 bg-info">
+                <img src="./hwk/images/그림2.png" class="img-fluid">    
+              </div>
+            </div>
+          </div>
     </div>
 </body>
 
