--- a/blog_list.html
+++ b/blog_list.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Blog</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/6751a826d3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -51,7 +52,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="loginModalLabel">Log in</h5>
+                    <h5 class="modal-title" id="loginModalLabel"><i class="fa-solid fa-right-to-bracket"></i>&nbsp Log in</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -61,11 +62,11 @@
                         <div class="col-md-6">
 
 
-                            <button type="button" class="btn btn-outline-dark">Log in with Google</button>
-                            <button type="button" class="btn btn-outline-dark">Log in with E-mail</button>
+                            <button type="button" class="btn btn-outline-dark" btn-block btn-sm><i class="fa-brands fa-google"></i>&nbsp&nbsp Log in with Google</button>
+                            <button type="button" class="btn btn-outline-dark" btn-block btn-sm><i class="fa-regular fa-envelope"></i>&nbsp&nbsp Log in with E-mail</button>
                         </div>
                         <div class="col-md-6">
-                            <button type="button" class="btn btn-outline-dark">Sign up with E-mail</button>                        
+                            <button type="button" class="btn btn-outline-dark" btn-block btn-sm><i class="fa-regular fa-envelope"></i>&nbsp&nbsp Sign up with E-mail</button>                        
 
                         </div>
 
@@ -74,7 +75,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    
                 </div>
             </div>
         </div>
