--- a/blog_list.html
+++ b/blog_list.html
@@ -5,6 +5,13 @@
     <title>Blog</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/6751a826d3.js" crossorigin="anonymous"></script>
+
+    
+
+
+
+
+    </script>
 </head>
 
 <body>
@@ -40,7 +47,7 @@
                 </ul>
                 <ul class="narbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-taggle="moddal" data-target="#loginModal">Log in</a>
+                        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log in</a>
                     </li>
                 </ul>
             </div>
@@ -170,6 +177,9 @@
                 <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
             
             </footer>
+            <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </body>
 
 </html>
