--- a/INDEX2.html
+++ b/INDEX2.html
@@ -1,28 +1,48 @@
 <!doctype html>
 <html>
-    <head>
-    <meta charset="utf-8"/>
-        <title> 김다정의 홈페이지</title>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <nav>
-            <a href = "./INDEX2.html">Home</a>
-            <a href = "./blog_list.html">Blog</a>
-            <a href = "./about_me.html">About me</a>
-            
-        </nav>
 
-        <h1>첫번째 크기 헤드라인</h1>
-        <h2>두번째 크기 헤드라인</h2>
-        <h3>세번째 크기 헤드라인</h3>
-        <h4>네번째 크기 헤드라인</h4>
-        <h5>네번째 크기 헤드라인</h5>
-        <p>문단은 p로 쓰세요</p>
-        <a href ="http://www.google.com">Go to google</a>
-        <hr/>
-        <img src="./hwk/images/1.png" width ="600px">
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <title> 김다정의 홈페이지</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/css/bootstrap.min.css" rel="stylesheet"
+        type="text/css">
+    <script type="text/javascript">
+        function doSomething() {
+            let a = document.getElementById('inputA').value;
+            let b = document.getElementById('inputB').value;
+            document.getElementById("valueA").innerHTML = a;
+            document.getElementById("valueB").innerHTML = b;
+            document.getElementById("valueC").innerHTML = Number(a) + Number(b);
+
+        }
+</head>
+            <body>
+                <nav>
+                    <a href="./INDEX2.html">Home</a>
+                    <a href="./blog_list.html">Blog</a>
+                    <a href="./about_me.html">About me</a>
+
+                </nav>
+
+                <h1>첫번째 크기 헤드라인</h1>
+                <h2>두번째 크기 헤드라인</h2>
+                <h3>세번째 크기 헤드라인</h3>
+                <h4>네번째 크기 헤드라인</h4>
+                <h5>다섯번째 크기 헤드라인</h5>
+
+                <label for="inputA">a</label>
+                <input id="inputA" value=1 onkeyup="doSomething()">
+                <label for="inputB">b</label>
+                <input id="inputA" value=2 onkeyup="doSomething()">
+
+                <p><span id="valueA">1</span></p>
+
+
+                <p>문단은 p로 쓰세요</p>
+                <a href="http://www.google.com">Go to google</a>
+                <hr />
+                <img src="./hwk/images/1.png" width="600px">
+            </body>
   
 
 </html>
