--- a/about_me.html
+++ b/about_me.html
@@ -6,6 +6,7 @@
     <title>About me</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.2/css/bootstrap.min.css" rel="stylesheet"
         type="text/css">
+    <script type="text/javascript" src="what_time_is_it.js"></script>
 
 </head>
 
